frontend/test/should_pass/edge_model_004.gm
undirected edge class A extends UEdge, AEdge;