frontend/test/should_fail/edge_model_010.gm
edge class A extends UEdge;